crates/solidity/testing/snapshots/bindings_output/using/for_fixed_arrays/generated/0.8.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or ErrorKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
   ╭─[ input.sol:5:1 ]
   │
 5 │ ╭─▶ using ArrayHelper for string[1];
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ library ArrayHelper {
   │         ─────┬─────  
   │              ╰─────── name: 1
 2 │     function asArray(string[1] memory items) internal {}
   │              ───┬───                  ──┬──  
   │                 ╰──────────────────────────── name: 2
   │                                         │    
   │                                         ╰──── name: 3
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ library ArrayHelper {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 2 │     function asArray(string[1] memory items) internal {}
   │ ────────────────────────────┬───┬────────────────────────  
   │                             ╰────────────────────────────── definiens: 2
   │                                 │                          
   │                                 ╰────────────────────────── definiens: 3
───╯
